--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@ $family-title: Anton;
 $family-text: Manrope;
 
 // Color
-$background: #EDEDED;
+$background: #E1E1E1;
 $shadow: 0px 4px 34px 30px rgba(0, 0, 0, 0.04);
 $main-color: #FFD15B;
 $text-grey: #7A7A7A;
@@ -16,6 +16,12 @@ $text-black: #1B1B1B;
   margin: 0;
   padding: 0;
   font-family: $family-text;
+}
+
+p {
+  font-family: $family-text;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 header {
@@ -49,6 +55,7 @@ header {
 }
 
 .head-input {
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -56,29 +63,106 @@ header {
 
 .head-input input {
   color: $text-grey;
-  padding: 0 30px;
-  border-radius: 10px 0 0 10px;
+  border-radius: 10px;
   border: none;
   height: 60px;
   width: 100%;
-}
-
-.head-input span {
-  display: flex;
-  align-items: center;
-  border-radius: 0 10px 10px 0;
-  padding-right: 10px;
-  border: none;
-  height: 60px;
-  background: #fff;
+  padding: 0 65px 0 30px;
 }
 
 .head-input button {
-  vertical-align: center;
+  position: absolute;
+  right: 8px;
   width: 45px;
   height: 46px;
   border: 0;
   border-radius: 10px;
   background: #1B1B1B;
   cursor: pointer;
+}
+
+
+/* MAIN */
+
+main {
+  background: $background;
+}
+
+
+/* SECTION RECETTE */
+
+section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  row-gap: 8rem;
+  padding: 8rem;
+}
+
+article {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: calc((100% / 3) - 5rem);
+  border-radius: 2rem;
+}
+
+.time {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  width: 4.5rem;
+  text-align: center;
+  border-radius: 15px;
+  background: $main-color;
+}
+
+article img {
+  object-fit: cover;
+  width: 100%;
+  height: 360px;
+  border-radius: 2rem 2rem 0 0;
+}
+
+.card-text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+  background: #fff;
+  padding: 2rem;
+  border-radius: 0 0 2rem 2rem;
+}
+
+h4 {
+  font-family: $family-text;
+  font-weight: 700;
+  font-size: 12px;
+  color: $text-grey;
+}
+
+.title-name {
+  font-family: $family-title;
+  font-weight: 400;
+  font-size: 18px;
+  height: 3rem;
+}
+
+.description {
+  height: 6rem;
+}
+
+.ingredients {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+  height: 12rem;
+}
+
+.ingredients div {
+  width: 50%;
+}
+
+.quantity {
+  color: $text-grey;
 }
