--- a/css/main.css
+++ b/css/main.css
@@ -178,6 +178,11 @@ main {
   top: 8px;
 }
 
+.filtre-icon img:first-child {
+  width: 10px;
+  cursor: pointer;
+}
+
 .filtre-icon img {
   width: 15px;
 }
@@ -187,10 +192,15 @@ main {
   flex-direction: column;
   max-height: 15rem;
   overflow: auto;
+  cursor: pointer;
 }
 
 .show {
   display: flex;
+}
+
+.rotate {
+  transform: rotate(180deg);
 }
 
 /* SECTION RECETTE */
