ajout clear filter + chacher les filtre actif

--- a/css/main.css
+++ b/css/main.css
@@ -206,11 +206,9 @@ main {
 
 /* SECTION RECETTE */
 section {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  row-gap: 8rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 5rem;
   padding: 5rem 8rem;
 }
 
@@ -218,8 +216,8 @@ article {
   position: relative;
   display: flex;
   flex-direction: column;
-  width: calc(33.3333333333% - 5rem);
   border-radius: 2rem;
+  margin: auto;
 }
 
 .time {
