--- a/css/main.css
+++ b/css/main.css
@@ -205,7 +205,7 @@ main {
 }
 
 /* SECTION RECETTE */
-section {
+#recipes {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 5rem;
