--- a/scss/main.scss
+++ b/scss/main.scss
@@ -223,7 +223,7 @@ main {
 
 /* SECTION RECETTE */
 
-section {
+#recipes {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 5rem;
